WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198067
Crash in WebFrame::jsContext() when m_coreFrame is null
https://bugs.webkit.org/show_bug.cgi?id=198067
Summary
Crash in WebFrame::jsContext() when m_coreFrame is null
Ryosuke Niwa
Reported
2019-05-20 20:41:12 PDT
via WKBundleFrameGetJavaScriptContextForWorld <
rdar://problem/48981573
>
Attachments
Adds null check
(1.49 KB, patch)
2019-05-22 14:02 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-05-22 14:02:38 PDT
Created
attachment 370443
[details]
Adds null check
Ryosuke Niwa
Comment 2
2019-05-22 15:32:07 PDT
Comment on
attachment 370443
[details]
Adds null check Clearing flags on attachment: 370443 Committed
r245653
: <
https://trac.webkit.org/changeset/245653
>
Ryosuke Niwa
Comment 3
2019-05-22 15:32:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug