Crash in WebFrame::jsContext() when m_coreFrame is null https://bugs.webkit.org/show_bug.cgi?id=198067

Reviewed by Alex Christensen.

Added missing null checks. Unfortunately no new tests since we don't have a reproducible test case.

* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::jsContext):
(WebKit::WebFrame::jsContextForWorld):


Canonical link: https://commits.webkit.org/212211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245653 268f45cc-cd09-0410-ab3c-d52691b4dbfc